# openagent-code

./: .dockerignore  .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml  mcp.json.example  permissions.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
docker/code/: Dockerfile
docker/serve/: Dockerfile
docker/train/: Dockerfile
docs/: DATASHEET.md
eval/: README.md  compare.py  harness.py  rubric.py
eval/agentic/: broad_review.yaml  review_dep_cache.yaml  review_package.yaml  security_audit.yaml  security_audit_hard.yaml  subtle_logic_review.yaml
eval/tasks/: add_function.yaml  coordinated_two_edit.yaml  dedup_preserve_order.yaml  fix_subtraction_bug.yaml  grep_and_fix.yaml  indentation_edit.yaml  long_context.yaml  multi_file_rename.yaml  multi_fix_plan.yaml  multiply_function.yaml  mutable_default_bug.yaml  no_regression.yaml  planning_task.yaml  subagent_search.yaml  subtle_edge_case.yaml
scripts/: check_memory.py  check_native_toolcalls.py  check_permissions.py  oac.ps1
specs/: 0001-permissions.md  0002-memory.md  0003-host-access.md  0004-agentic-evals.md  0005-distillation.md  README.md
src/: __init__.py  __main__.py  agent.py  cli.py  config.py  context.py  logsetup.py  mcp_client.py  memory.py  model.py  orchestrator.py  permissions.py  planner.py  prompts.py  runtime.py  session.py  subagent.py  tools.py  toolset.py  trajectory.py
train/: README.md  capture.py  convert.py  merge.py  sft.py
train/tasks/: add_clamp_feature.yaml  add_memoize_decorator.yaml  caesar_cipher.yaml  chunk_list.yaml  fix_average_empty.yaml  fix_binary_search.yaml  fix_fizzbuzz_order.yaml  fix_strip_prefix.yaml  fix_titlecase_apostrophe.yaml  flatten_nested.yaml  group_by_key.yaml  parse_query_string.yaml  roman_numerals.yaml  rpn_calculator.yaml  running_total.yaml  snake_to_camel.yaml  validate_brackets.yaml  word_frequency.yaml
