# =============================================================================
# openagent-code - packaging + the local launcher
# =============================================================================
#
# This exists so local use feels natural: `pip install -e .` puts an
# `openagent-code` command on your PATH, so you `cd` into any repo and run
#     openagent-code "fix the failing test"      # one-shot
#     openagent-code                              # interactive REPL
# instead of `python -m src` + a pile of $env:CODE_* vars. The workspace defaults
# to the current directory, and the common knobs are flags (--workspace/-C,
# --mode, --add-dir, --memory/--no-memory, --warmup) — no env juggling.
#
# Docker (docker/code/Dockerfile, docker-compose.yml) stays as the SANDBOX/eval
# runtime; this is the interactive/dev front door.
# =============================================================================

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-code"
version = "0.6.0"
description = "Self-hosted coding agent instrumented for training data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "William McKeon" }]
dependencies = [
    "litellm>=1.40.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "mcp>=1.0.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
]

# Optional extras — kept OUT of the base agent so a normal install stays lean.
[project.optional-dependencies]
# AWS Bedrock teacher (boto3 / IAM auth). Needed only when CODE_MODEL=bedrock/...
#   pip install -e ".[bedrock]"
bedrock = [
    "boto3>=1.34.0",
]
# Distillation training stack (Phase 5 / specs/0005). Heavy; needed only to run
# train/sft.py — never to run the agent.
#   pip install -e ".[train]"
train = [
    "transformers>=4.44.0",
    "trl>=0.9.0",
    "peft>=0.12.0",
    "accelerate>=0.33.0",
    "datasets>=2.14.0",
    "bitsandbytes>=0.43.0",
    # torch is listed for completeness, but install the CUDA build matching your GPU box
    # separately (PyPI's default is CPU-only; bitsandbytes/4-bit needs CUDA).
    "torch>=2.1.0",
    "sentencepiece>=0.1.99",   # tokenizer backend for many models
    "protobuf>=3.20",          # some tokenizers load via protobuf
]
# Serving the distilled student (Stage 6). vLLM gives an OpenAI-compatible endpoint AND
# parses native tool-calls. Normally you serve via the docker/serve image (pinned, Blackwell-
# tuned); this extra is for host-based serving. Heavy + CUDA-specific.
#   pip install -e ".[serve]"
serve = [
    "vllm>=0.6.0",
]

# `openagent-code` -> src/cli.py:main(). The function returns an exit code, which
# setuptools' console-script wrapper passes to sys.exit().
[project.scripts]
openagent-code = "src.cli:main"

[tool.setuptools]
packages = ["src"]
